# ITS

./: .gitignore  3DThinShell.sln  3DThinShell.vcxproj  3DThinShell.vcxproj.filters  BasicDataType.h  CMDParser.hpp  CMakeLists.txt  CUDACheck.cuh  CUDACompute.cu  CollisionDetection.h  Config.h  Intersecting4Meshes.sln  Intersecting4Meshes.vcxproj  Intersecting4Meshes.vcxproj.filters  LICENSE  MyBaseModel.h  MyOctree.cpp  MyOctree.h  README.md  common.hpp  main.cpp  mian.cpp
app/: CMakeLists.txt  FCPWHelper.hpp  main.cpp
cmake/: ITSDependencies.cmake
cmake/common/: add_lib.cmake
model/: bunny.off_16.vox  bunny.off_512.vox  bunny.tri  bunny.tridata  bunny2048_8.octree
output/2/: SDFValue.txt
output/4/: BSplineValue.txt  SDFValue.txt
output/bunny/1/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/bunny/2/: BSplineValue.txt  Coefficients.txt  Matrix.txt  Matrix_1.txt  SDFValue.txt  interPointBValue.txt
output/bunny/3/: BSplineValue.txt  BSplineValue_1.txt  Coefficients.txt  Matrix.txt  SDFValue.txt
output/bunny/4/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/bunny/5/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/bunny/6/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/bunny/7/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/bunny/8/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/bunny/9/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/sphere/1/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/sphere/2/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/sphere/3/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/sphere/4/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/sphere/5/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/sphere/6/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/sphere/7/: BSplineValue.txt  Coefficients.txt  SDFValue.txt
output/sphere/8/: BSplineValue.txt  Coefficients.txt
output/sphere/9/: BSplineValue.txt  SDFValue.txt
src/: BSpline.hpp  BaseModel.cpp  BaseModel.h  BasicDataType.h  CMakeLists.txt  CollisionDetection.cpp  Config.hpp  KNNHelper.h  MarchingCubes.hpp  ModelDefine.h  MortonLUT.h  MyBaseModel.cpp  MyBaseModel.h  MyOctree.cpp  MyOctree.h  Octree.cpp  Octree.h  ParticleMesh.h  SDFHelper.h  SVO.h  SharedPath.h  TestAllTime.h  TestSpdlog.cu  ThinShells.cpp  ThinShells.h  ThinShellsOctree.deprecated.cpp  main.cpp
src/core/: BSpline.hpp  BaseModel.cpp  BaseModel.hpp  CMakeLists.txt  CUDACompute.cu  CUDACompute.hpp  Mesh.cpp  Mesh.hpp  MortonLUT.hpp  SVO.cu  SVO.hpp  ThinShells.cpp  ThinShells.hpp
src/cuAcc/: CUDACompute.cu  CUDACompute.h  SVO.cu
src/cuAcc/MarchingCubes/: MCDefine.h  MarchingCubes.cu  MarchingCubes.h  SDFCompute.cu
src/deprecated/: BaseModel.cpp  BaseModel.hpp  CMDParser.inl  CUDACompute.cu  CUDAMacro.h  IO.hpp  MarchingCubes.hpp  Octree.cpp  ParticleMesh.cpp  Point3D.h  SVO.cu  ThinShells - 副本.cpp  ThinShells - 副本.hpp  ThinShells.cpp  ThinShells.deprecated.h  ThinShells.h  ThinShells.hpp  ThinShellsOctree.deprecated.cpp
src/detail/: BasicDataType.h  BasicDataType.hpp  CMakeLists.txt  Geometry.hpp
src/detail/cuda/: CUDACheck.cuh  CUDAMath.cuh  CUDAMath.hpp  CUDAUtil.cuh  DeviceQuery.cuh  cuBLASCheck.cuh
src/mc/: CMakeLists.txt  LookTable.hpp  MCDefine.h  MarchingCubes.cu  MarchingCubes.hpp  MarchingCubesLUT.hpp  SDFCompute.cu
src/test/: TestConfig.h
src/utils/: CMDParser.hpp  CMDParser.inl  Common.hpp  File.hpp  Geometry.hpp  IO.hpp  Logger.hpp  String.hpp  Timer.hpp  common.hpp
src/utils/cuda/: CUDACheck.cuh  CUDAMath.hpp  CUDAUtil.cuh  DeviceQuery.cuh  cuBLASCheck.cuh
src/viewer/: CMakeLists.txt  MeshViewer.cpp  MeshViewer.hpp
vis/2/: edgeInter.xyz  faceInter.xyz
vis/4/: edgeInter.xyz  faceInter.xyz
vis/bunny/2/: edgeInter.xyz  faceInter.xyz
vis/bunny/3/: edgeInter.xyz  faceInter.xyz
vis/bunny/4/: faceInter.xyz
vis/bunny/5/: edgeInter.xyz  faceInter.xyz
vis/bunny/6/: edgeInter.xyz  faceInter.xyz
vis/bunny/7/: edgeInter.xyz  faceInter.xyz
vis/bunny/8/: edgeInter.xyz  faceInter.xyz
vis/bunny/9/: edgeInter.xyz  faceInter.xyz
